[package]
name = "minechat-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.26"
miette = "7.5.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["io-std", "io-util", "net", "signal"] }
uuid = { version = "1.15.1", features = ["v4"] }
