[package]
name = "minechat-protocol"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/walker84837/minechat-protocol"
description = "The MineChat protocol, enabling you chat with people over on Minecraft"
authors = ["walker84837"]
readme = "README.md"
rust-version = "1.85.0"
keywords = ["networking", "async", "authentication", "chat", "protocol"]
categories = ["network-programming", "asynchronous", "authentication"]

[dependencies]
log = "0.4.26"
miette = "7.5.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["io-std", "io-util", "net", "signal"] }
uuid = { version = "1.15.1", features = ["v4"] }
